--- a/index.html
+++ b/index.html
@@ -12,66 +12,95 @@
             <h1>Anuncie seu veículo e encontre pessoas interessadas!</h1>
         </div>
         <div class="form-container">
-            <div class="title-form">
+            <div class="form-header">
                 <h3>Formulário</h3>
                 <h2>Venda seu veículo!</h2>
                 <p>Descreva as características e marque os opcionais que ele possui.</p>
             </div>
-            <div class="form">
-                <label for="ad-title">Título do anúncio:</label>
-                <input type="text" name="ad-title" placeholder="Um título para aparecer no anúncio do seu carro" required>
-
-                <label for="car-price">Valor:</label>
-                <input type="text" name="car-price" placeholder="Defina um preço" required>
-
-                <label for="car-description">Descrição:</label>
-                <textarea name="car-description" placeholder="Aqui você descreve os detalhes do veículo, por exemplo se ele tem algum arranhão" required></textarea>
-
-                <label for="marca-carro">Marca:</label>
-                <input type="text" name="marca-carro" placeholder="Digite a marca do veículo" required>
-
-                <label for="car-model">Modelo:</label>
-                <input type="text" name="car-model" placeholder="Digite o modelo do veículo" required>
-
-                <label for="km">Quilometragem:</label>
-                <input type="text" name="km" placeholder="Digite a quantidade de Km rodados" required>
-
-                <label for="buy-date">Data da compra:</label>
-                <input type="date" name="buy-date" required>
-
-                <label for="car-gearbox">Câmbio:</label>
-                <input type="radio" name="car-gearbox" value="manual">
-                <label for="manual">Manual</label>
-                <input type="radio" name="car-gearbox" value="automatico">
-                <label for="automatico">Automático</label>
-
-                <label for="optional">Opcionais:</label>
-                <div class="checkbox-lado-a">
-                    <input type="checkbox" name="optional[]" value="airbag">
-                    <label for="airbag">Airbag</label>
-                    <input type="checkbox" name="optional[]" value="alarme">
-                    <label for="alarme">Alarme</label>
-                    <input type="checkbox" name="optional[]" value="ar-condicionado">
-                    <label for="ar-condicionado">Ar Condicionado</label>
-                    <input type="checkbox" name="optional[]" value="camera-re">
-                    <label for="camera-re">Câmera de ré</label>
+            <form>
+                <div class="input-container">
+                    <div class="box-input">
+                        <label class="title-input" for="ad-title">Título do anúncio: <span class="riquired-field">*</span></label>
+                        <input type="text" name="ad-title" id="ad-title" class="block" placeholder="Um título para aparecer no anúncio do seu carro" minlength="1" maxlength="30" required>
+                    </div>
+                    <div class="input-container">
+                        <label for="car-price">Valor: <span class="riquired-field">*</span></label>
+                        <input type="number" name="car-price" id="car-price" class="block" placeholder="Defina um preço" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="car-description">Descrição: <span class="riquired-field">*</span></label>
+                        <textarea name="car-description" id="car-description" class="block" placeholder="Aqui você descreve os detalhes do veículo, por exemplo se ele tem algum arranhão" required></textarea>
+                    </div>
+                    <div class="box-input">
+                        <label for="brand-car">Marca: <span class="riquired-field">*</span></label>
+                        <input type="text" name="brand-car" id="brand-car" class="block" placeholder="Digite a marca do veículo" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="car-model">Modelo: <span class="riquired-field">*</span></label>
+                        <input type="text" name="car-model" id="car-model" class="block" placeholder="Digite o modelo do veículo" required>
+                    </div>
+                    <div class="box-input">
+                        <label for="km">Quilometragem: <span class="riquired-field">*</span></label>
+                        <input type="number" name="km" id="hm" class="block" placeholder="Digite a quantidade de Km rodados" required>
+                    </div>
+                    <div class="box-input">
+                    <label for="buy-date">Data da compra: <span class="riquired-field">*</span></label>
+                    <input type="date" name="buy-date" id="buy-date" class="block" required>
+                    </div>
+                    <div class="box-input">
+                        <p>Câmbio: <span class="riquired-field">*</span></p>
+                        <input type="radio" name="car-gearbox" id="manual">
+                        <label for="manual">Manual</label>
+                        <input type="radio" name="car-gearbox" id="automatico">
+                        <label for="automatico">Automático</label>
+                    </div>
+                    <div class="optional-box">
+                        <p>Opcionais:</p>
+                        <ul class="optional-list">
+                            <li>
+                                <input type="checkbox" name="optional[]" value="airbag">
+                                <label for="airbag">Airbag</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="optional[]" value="alarme">
+                                <label for="alarme">Alarme</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="optional[]" value="ar-condicionado">
+                                <label for="ar-condicionado">Ar Condicionado</label>
+                            </li>
+                            <li>
+                            <input type="checkbox" name="optional[]" value="camera-re">
+                            <label for="camera-re">Câmera de ré</label>
+                            </li>
+                        </ul>
+                        <ul class="optional-box">
+                            <li>
+                                <input type="checkbox" name="optional[]" value="assistente-pista">
+                                <label for="assistente-pista">Assistente de pista</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="optional[]" value="partida-keyless">
+                                <label for="partida-keyless">Partida Keyless</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="optional[]" value="integracao-celular">
+                                <label for="integracao-celular">Integração com celular</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" name="optional[]" value="banco-couro">
+                                <label for="banco-couro">Banco de couro</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="box-input"></div>
+                        <label for="image-car">Fotos do carro: <span class="riquired-field">*</span></label>
+                        <input type="file" name="image-car" multiple accept="image/jpg" required>
+                    </div>
+                    <input type="reset" value="Apagar">
+                    <input type="submit" value="Enviar">
                 </div>
-                <div class="checkbox-lado-b">
-                    <input type="checkbox" name="optional[]" value="assistente-pista">
-                    <label for="assistente-pista">Assistente de pista</label>
-                    <input type="checkbox" name="optional[]" value="partida-keyless">
-                    <label for="partida-keyless">Partida Keyless</label>
-                    <input type="checkbox" name="optional[]" value="integracao-celular">
-                    <label for="integracao-celular">Integração com celular</label>
-                    <input type="checkbox" name="optional[]" value="banco-couro">
-                    <label for="banco-couro">Banco de couro</label>
-                </div>
-
-                <label for="image-car">Fotos do carro:</label>
-                <input type="file" name="image-car" required>
-                </div>
-
-            </div>
+            </form>
         </div>
     </div>
 </body>
